calico-enterprise_versioned_docs/version-3.14/operations/clis/calicoctl/install.mdx
---
description: Install the CLI for Calico.
---

# Install calicoctl

import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';
import CodeBlock from '@theme/CodeBlock';

## Big picture

`calicoctl` allows you to create, read, update, and delete {{prodname}} objects
from the command line. These objects represent the networking and policy
of your cluster.

You should limit access to `calicoctl` and your {{prodname}} datastore to
trusted administrators. We discuss methods of limiting access to the
{{prodname}} datastore in the [configuration section](configure/index.mdx).

You can run `calicoctl` on any host with network access to the
{{prodname}} datastore as either a binary or a container.
As a binary on a single host, you can also run it as a kubectl plugin.

<!--- Change download URL to latest release if user browsing master branch.  --->

export const version = '{{version}}' === 'master' ? 'master' : '{{releaseTitle}}';

## How to

:::note

Make sure you always install the version of `calicoctl` that matches the version of {{prodname}} running on your cluster.

:::

- [Install calicoctl as a binary on a single host](#install-calicoctl-as-a-binary-on-a-single-host)
- [Install calicoctl as a kubectl plugin on a single host](#install-calicoctl-as-a-kubectl-plugin-on-a-single-host)
- [Install calicoctl as a container on a single host](#install-calicoctl-as-a-container-on-a-single-host)
- [Install calicoctl as a Kubernetes pod](#install-calicoctl-as-a-kubernetes-pod)

### Install calicoctl as a binary on a single host

<Tabs>
<TabItem label="Linux" value="Linux-0">

Log into the host, open a terminal prompt, and navigate to the location where you want to install the binary.

:::note

Consider navigating to a location that's in your `PATH`. For example, `/usr/local/bin/`.

:::

Use the following command to download the `calicoctl` binary.

<CodeBlock language='batch'>
  {'{{version}}' === 'master'
    ? `curl -o calicoctl -O -L {{filesUrl}}/download/binaries/${version}/calicoctl`
    : `curl -o calicoctl -O -L {{downloadsurl}}/ee/binaries/${version}/calicoctl`}
</CodeBlock>

Set the file to be executable.

```batch
chmod +x calicoctl
```

:::note

If the location of `calicoctl` is not already in your `PATH`, move the file to one that is or add its location to your `PATH`. This will allow you to invoke it without having to prepend its location.

:::

</TabItem>
<TabItem label="Mac OSX" value="Mac OSX-1">

Log into the host, open a terminal prompt, and navigate to the location where you want to install the binary.

:::note

Consider navigating to a location that's in your `PATH`. For example, `/usr/local/bin/`.

:::

Use the following command to download the `calicoctl` binary.

<CodeBlock language='batch'>
  {'{{version}}' === 'master'
    ? `curl -o calicoctl -O -L {{filesUrl}}/download/binaries/${version}/calicoctl-darwin-amd64`
    : `curl -o calicoctl -O -L {{downloadsurl}}/ee/binaries/${version}/calicoctl-darwin-amd64`}
</CodeBlock>

Set the file to be executable.

```batch
chmod +x calicoctl
```

:::note

If you get the error, `cannot be opened because the developer cannot be verified` when using `caicoctl` for the first time, go to `Applicaitons > System Prefences > Security & Privacy` in the `General` tab at the bottom of the window click `Allow anyway`.

:::

:::note

If the location of `calicoctl` is not already in your `PATH`, move the file to one that is or add its location to your `PATH`. This will allow you to invoke it without having to prepend its location.

:::

</TabItem>
<TabItem label="Windows" value="Windows-2">

Use the following PowerShell command to download the `calicoctl` binary.

:::tip

Consider running PowerShell as administrator and navigating
to a location that's in your `PATH`. For example, `C:\Windows`.

:::

<CodeBlock language='batch'>
  {'{{version}}' === 'master'
    ? `Invoke-WebRequest -Uri "{{filesUrl}}/download/binaries/${version}/calicoctl-windows-amd64.exe" -OutFile "calicocttl.exe"`
    : `Invoke-WebRequest -Uri "{{downloadsurl}}/ee/binaries/${version}/calicoctl-windows-amd64.exe" -OutFile "calicocttl.exe"`}
</CodeBlock>

</TabItem>
</Tabs>

### Install calicoctl as a kubectl plugin on a single host

<Tabs>
<TabItem label="Linux" value="Linux-3">

Log into the host, open a terminal prompt, and navigate to the location where you want to install the binary.

:::note

Consider navigating to a location that's in your `PATH`. For example, `/usr/local/bin/`.

:::

Use the following command to download the `calicoctl` binary.

<CodeBlock language='batch'>
  {'{{version}}' === 'master'
    ? `curl -o kubectl-calico -O -L {{filesUrl}}/download/binaries/${version}/calicoctl`
    : `curl -o kubectl-calico -O -L {{downloadsurl}}/ee/binaries/${version}/calicoctl`}
</CodeBlock>

Set the file to be executable.

```batch
chmod +x kubectl-calico
```

:::note

If the location of `kubectl-calico` is not already in your `PATH`, move the file to one that is or add its location to your `PATH`. This is required for kubectl to detect the plugin and allow you to use it.

:::

</TabItem> 
<TabItem label="Mac OSX" value="Mac OSX-4">

Log into the host, open a terminal prompt, and navigate to the location where you want to install the binary.

:::note

Consider navigating to a location that's in your `PATH`. For example, `/usr/local/bin/`.

:::

Use the following command to download the `calicoctl` binary.

<CodeBlock language='batch'>
  {'{{version}}' === 'master'
    ? `curl -o kubectl-calico -O -L {{filesUrl}}/download/binaries/${version}/calicoctl-darwin-amd64`
    : `curl -o kubectl-calico -O -L {{downloadsurl}}/ee/binaries/${version}/calicoctl-darwin-amd64`}
</CodeBlock>

Set the file to be executable.

```batch
chmod +x kubectl-calico
```

:::note

If you get the error, "cannot be opened because the developer cannot be verified" when using `calicoctl` for the first time, go to Applications > System Prefences > Security & Privacy in the **General** tab at the bottom of the window click `Allow anyway`.

:::

:::note

If the location of `kubectl-calico` is not already in your `PATH`, move the file to one that is or add its location to your `PATH`. This is required for `kubectl` to detect the plugin.

:::

</TabItem> 
<TabItem label="Windows" value="Windows-5">

Use the following PowerShell command to download the `calicoctl` binary.

:::tip

Consider running PowerShell as administrator and navigating
to a location that's in your `PATH`. For example, `C:\Windows`.

:::

<CodeBlock language='batch'>
  {'{{version}}' === 'master'
    ? `Invoke-WebRequest -Uri "{{filesUrl}}/download/binaries/${version}/calicoctl-windows-amd64.exe" -OutFile "kubectl-calico.exe"`
    : `Invoke-WebRequest -Uri "{{downloadsurl}}/ee/binaries/${version}/calicoctl-windows-amd64.exe" -OutFile "kubectl-calico.exe"`}
</CodeBlock>

</TabItem>
</Tabs>

Verify the plugin works.

```batch
kubectl calico -h
```

You can now run any `calicoctl` subcommands through `kubectl calico`.

:::note

If you run these commands from your local machine (instead of a host node), some of the node related subcommands will not work (like node status).

:::

### Install calicoctl as a container on a single host

1. Ensure that you have the [`config.json` file with the private Tigera registry credentials](../../../getting-started/install-on-clusters/calico-enterprise.mdx#get-private-registry-credentials-and-license-key).

1. From a terminal prompt, use the following command to either create or open the `~/.docker/config.json` file.

   ```batch
   vi ~/.docker/config.json
   ```

1. Depending on the existing contents of the file, edit it in one of the following ways.

   - **New file**: Paste in the entire contents of the `config.json` file from Tigera.

   - **Existing file without quay.io object**: Add the following lines from the `config.json` inside the `"auth"` object.

     ```json
     "quay.io": {
       "auth": "<ROBOT-TOKEN-VALUE>",
       "email": ""
     }
     ```

   - **Existing file with quay.io object**: Add the following lines from the `config.json` inside the `"quay.io"` object.

     ```json
     "auth": "<ROBOT-TOKEN-VALUE>",
     "email": ""
     ```

1. Save and close the file.

1. Use the following commands to pull the `calicoctl` image from the Tigera
   registry.

   ```batch
   docker pull {{registry}}{% component_image("calicoctl") %}
   ```

1. Confirm that the image has loaded by typing `docker images`.

   ```batch
   REPOSITORY                TAG               IMAGE ID       CREATED         SIZE
   {{ releases.0.components.calicoctl.image }}    {{ releases.0.components.calicoctl.version }}            e07d59b0eb8a   2 minutes ago   42MB
   ```

**Next step**:

[Configure calicoctl to connect to your datastore](configure/index.mdx).

### Install calicoctl as a Kubernetes pod

Run the following to deploy the `calicoctl` container to your nodes.

```batch
kubectl apply -f {{filesUrl}}/manifests/calicoctl.yaml
```

:::note

You can also [view the YAML in a new tab]({{filesUrl}}/manifests/calicoctl.yaml).

:::

You can then run commands using kubectl as shown below.

```batch
kubectl exec -ti -n kube-system calicoctl -- /calicoctl get profiles -o wide
```

An example response follows.

```
NAME                 TAGS
kns.default          kns.default
kns.kube-system      kns.kube-system
```

We recommend setting an alias as follows.

```batch
alias calicoctl="kubectl exec -i -n kube-system calicoctl -- /calicoctl"
```

:::note

In order to use the `calicoctl` alias when reading manifests, redirect the file into stdin, for example: `batch calicoctl create -f - < my_manifest.yaml.`

:::
